--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+  /* body {
+    overflow: auto;
+  } */
+
 .paragraph{
   font-family: "Inter", sans-serif;
   font-style: italic;
